glFusion ChangeLog

v1.1.2
------
- Updated version numbers (Mark)
        private/system/sql/mysql_tableanddata.php

- Comments always show username, regarless of show_fullname configuration
  setting - Port from Geeklog (Mark)
        private/system/lib-comment.php

- Do not filter non-HTML email messages (Mark)
        public_html/lib-common.php

- Fixed bug where [imageX] did not allow more than 1 image per story (Mark)
        private/system/lib-story.php

- Updated MG import for stories to use new story class (Mark)
        private/plugins/mediagallery/include/lib-batch.php
        private/plugins/mediagallery/templates/gl_story_import.thtml
        public_html/admin/plugins/mediagallery/importers/gl_story/index.php

- New option to email user when admin creates account (Mark)
        private/system/lib/lib-user.php
        public_html/admin/user.php
        public_html/layout/nouveau/admin/users/edituser.thtml

- Enhanced password generation, do not include commonly mistaken characters
  like 0 and O, 1 and l - Patch by Jeff Hare (Mark)
        private/system/lib/lib-user.php

- Change mailer text to glFusion CMS (Mark)
        private/lib/phpmailer/class.phpmailer.php

- Removed extra : (colon) from template (already in language file) (Mark)
        public_html/layout/nouveau/profiles/contactuserform_advanced.thtml

- Media Gallery - removed references to non-existent usage.html in
  Media Gallery (Mark)
       private/plugins/mediagallery/templates/administration.thtml

- Fixed error in emailglfusionstories that would include banned and non-active
  users - Patch by cchiapusio (Mark)
        public_html/lib-common.php

- SiteTailor - Implemented the hmenu and vmenu auto tags (Mark)
        private/plugins/sitetailor/functions.inc

- Upgraded FCKeditor to latest version
        private/system/lib-comment.php
        public_html/profiles.php
        public_html/submit.php

        public_html/javascript/advanced_editor.js